dim/spec/test_input/invalid_input/invalid_config_toplevel_attribute.dim
Config:
  CompanyName:
    files:
      - modules/duplicate_module.dim
    category: module

Test:
